# 3d-laser-room

./: .gitignore  .gitmodules  3D_Lazer_Room.sln  CMakeLists.txt  CmakeLists.txt  Debug.h  DebugLog.h  GLfunctions.h  Main.cpp  Main.h  Primitives.h  compile.bat  gui.h  makeMP4video.h  pch.h  rayTracer.h  readme.md  readme.txt
3D_Lazer_Room/: 3D_Lazer_Room.vcxproj  3D_Lazer_Room.vcxproj.filters  GLfunctions.h  Main.cpp  Main.h  OBJfile.h  Primitives.h  packages.config  rayTracer.h
3D_Lazer_Room/shaders/: fragment - Copy.shader  fragment.shader  vertex.shader
compile/: compile.bat  compile_db.bat  precompile.bat
depend/: OBJ_Loader.h  debug.h
res/shaders/: fragment.h.shader  fragment.shader  unicolor_fragment.shader  vertex.shader
shaders/: Fragment.shader  UniColor.shader
src/: engine.h  gui.h  openGL.h
